Fixed plotting of bode plots, re-run examples, minor edits

--- a/systems_spectral_domain/bode_plot.ipynb
+++ b/systems_spectral_domain/bode_plot.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Bode Plots\n",
     "\n",
-    "The Fourier domain transfer function $H(j \\omega)$ characterizes the transmission properties of a linear time-incariant (LTI) system with respect to the [harmonic exponential signal](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $e^{j \\omega t}$ for the angular frequency $\\omega = 2 \\pi f$. In order to illustrate the characteristics of an LTI system, often the magnitude $| H(j \\omega) |$ and phase $\\varphi_H(j \\omega)$ of the transfer function is regarded separately. Decomposing the output signal $Y(j \\omega) = X(j \\omega) \\cdot H(j \\omega)$ into its magnitude $| Y(j \\omega) |$ and phase $\\varphi_Y(j \\omega)$ yields\n",
+    "The Fourier domain transfer function $H(j \\omega)$ characterizes the transmission properties of a linear time-incariant (LTI) system with respect to an [harmonic exponential signal](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $e^{j \\omega t}$ with angular frequency $\\omega = 2 \\pi f$. In order to illustrate the characteristics of an LTI system, often the magnitude $| H(j \\omega) |$ and phase $\\varphi_H(j \\omega)$ of the transfer function is regarded separately. Decomposing the output signal $Y(j \\omega) = X(j \\omega) \\cdot H(j \\omega)$ into its magnitude $| Y(j \\omega) |$ and phase $\\varphi_Y(j \\omega)$ yields\n",
     "\n",
     "\\begin{align}\n",
     "| Y(j \\omega) | &= | X(j \\omega) | \\cdot | H(j \\omega) | \\\\\n",
@@ -26,7 +26,7 @@
     "\n",
     "where $X(j \\omega)$ denotes the input signal, and $| X(j \\omega) |$ and $\\varphi_X(j \\omega)$ its magnitude and phase, respectively. It can be concluded from above equations, that the magnitude $| H(j \\omega) |$ provides the frequency-dependent attenuation of the magnitude $| X(j \\omega) |$ of the input signal by the system, while $\\varphi_H(j \\omega)$ provides the introduced phase-shift. \n",
     "\n",
-    "A common graphical illustration of the sytem properties in terms of the magnitude and phase of the transfer function are [*bode plots*](https://en.wikipedia.org/wiki/Bode_plot). Here the logarithmic magnitude of the transfer function $20 \\log_{10} | H(j \\omega) |$ in [decibels](https://en.wikipedia.org/wiki/Decibel) is plotted against the logarithm of the frequency $\\omega$ or $f$. The phase $\\varphi_H(j \\omega)$ is plotted linearly against the logarithm of the frequency. A transfer function $H(s)$ which is a rational function in $s$ can be represented [in terms of its poles and zeros](../laplace_transform/definition.ipynb#Representation). Applying this representation to the transfer function $H(j \\omega)$ in the Fourier domain yields\n",
+    "A commonly used graphical illustration of the system properties in terms of the magnitude and phase of the transfer function are [*bode plots*](https://en.wikipedia.org/wiki/Bode_plot). Here the logarithmic magnitude of the transfer function $20 \\log_{10} | H(j \\omega) |$ in [decibels](https://en.wikipedia.org/wiki/Decibel) is plotted against the logarithm of the frequency $\\omega$ or $f$. The phase $\\varphi_H(j \\omega)$ is plotted linearly against the logarithm of the frequency. A transfer function $H(s)$ which is a rational function in $s$ can be represented [in terms of its poles and zeros](../laplace_transform/definition.ipynb#Representation). Applying this representation to the transfer function $H(j \\omega)$ in the Fourier domain yields\n",
     "\n",
     "\\begin{equation}\n",
     "H(j \\omega) = K \\cdot \\frac{\\prod_{\\mu=0}^{Q} (j \\omega - s_{0 \\mu})}{\\prod_{\\nu=0}^{P} (j \\omega - s_{\\infty \\nu})}\n",
@@ -39,14 +39,14 @@
     "\\varphi_H(j \\omega) &= \\sum_{\\mu=0}^{Q} \\arg (j \\omega - s_{0 \\mu}) - \\sum_{\\nu=0}^{P} \\arg (j \\omega - s_{\\infty \\nu})\n",
     "\\end{align}\n",
     "\n",
-    "where $\\arg(\\cdot)$ denotes the [argument](https://en.wikipedia.org/wiki/Argument_%28complex_analysis%29) (phase) of a complex function. It can be concluded from above result, that the individual contributions of the poles and zeros to the bode plot can be superimposed. This fact can be exploited to manually draw approximated bode plots illustrating the properties of an LTI system for a given set of poles and zeros. Rules for the asymptotic behavior of the magnitude and phase for single poles and zeros are available in the [literature](https://en.wikipedia.org/wiki/Bode_plot#Rules_for_handmade_Bode_plot). For instance it is stated that a single pole/zero results in a magnitude response in the bode plot that decreases/increases with a slope of 20 dB per decade. These rules provide insights into the influence of the location and order of poles and zeros on the properties of systems. They are of benefit when designing systems with given magnitude and phase properties."
+    "where $\\arg(\\cdot)$ denotes the [argument](https://en.wikipedia.org/wiki/Argument_%28complex_analysis%29) (phase) of a complex function. It can be concluded from above result, that the individual contributions of the poles and zeros to the bode plot can be superimposed. This fact can be exploited to sketch approximated bode plots illustrating the properties of an LTI system for a given set of poles and zeros. Rules for the asymptotic behavior of the magnitude and phase for single poles and zeros are available in the [literature](https://en.wikipedia.org/wiki/Bode_plot#Rules_for_handmade_Bode_plot). For instance it is stated that a single pole/zero results in a magnitude response in the bode plot that decreases/increases with a slope of 20 dB per decade. These rules provide insights into the influence of the location and order of poles and zeros on the properties of systems. They are of benefit when designing systems with given magnitude and phase properties."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
+    "**Example - Second order low-pass filter**\n",
     "\n",
     "The bode plot of the [2nd order low-pass filter](../laplace_transform/network_analysis.ipynb#Example:-Second-Order-Low-Pass-Filter) is plotted. The transfer function $H(j \\omega)$ of the low-pass filter can be derived from its Laplace domain counterpart $H(s)$ by\n",
     "\n",
@@ -61,15 +61,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
+    "\n",
+    "s = sym.symbols('s')\n",
     "w = sym.symbols('omega', real=True)\n",
     "R, L, C = sym.symbols('R L C', positive=True)\n",
-    "s = sym.I * w\n",
     "\n",
     "H = 1/(C*L*s**2 + C*R*s + 1)\n",
+    "H = H.subs(s, sym.I * w)\n",
     "H"
    ]
   },
@@ -86,17 +88,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RLC = {R: 1, L: sym.Rational('.5'), C: sym.Rational('.4')}\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sympy.plotting.plot import MatplotlibBackend\n",
     "\n",
-    "sym.plot(20*sym.log(sym.Abs(H.subs(RLC)), 10), (w, 0.1, 10), xscale='log', xlabel='$\\omega$', ylabel='$20 \\log_{10} | H(j \\omega) |$');\n",
-    "sym.plot(sym.arg(H.subs(RLC)), (w, 0.1, 10), xscale='log', xlabel='$\\omega$', ylabel=r'$\\varphi(j \\omega)$');"
+    "def logx_plot(Hw, wrange, **kwargs):\n",
+    "    'create plot with logarithmic x-axis'\n",
+    "    p = sym.plot(Hw, wrange, show=False, **kwargs)\n",
+    "    backend = MatplotlibBackend(p)\n",
+    "    backend.process_series()\n",
+    "    backend.ax.spines['left'].set_position(('axes', 0))\n",
+    "    backend.ax.spines['bottom'].set_position(('axes', 0))\n",
+    "    plt.xscale('log')\n",
+    "    plt.grid(which='both')\n",
+    "\n",
+    "def db(x):\n",
+    "    'compute dB value'\n",
+    "    return 20 * sym.log(sym.Abs(x), 10)\n",
+    "\n",
+    "\n",
+    "RLC = {R: 1, L: sym.Rational('.5'), C: sym.Rational('.4')}\n",
+    "logx_plot(db(H.subs(RLC)), (w, 0.1, 10),\n",
+    "          xlabel='$\\omega$', ylabel='$20 \\log_{10} | H(j \\omega) |$ in dB')\n",
+    "logx_plot(sym.arg(H.subs(RLC)), (w, 0.1, 10),\n",
+    "          xlabel='$\\omega$', ylabel=r'$\\varphi(j \\omega)$')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
+    "**Example - Second order system**\n",
     "\n",
     "The bode plot of a second-order LTI system with the following transfer function\n",
     "\n",
@@ -111,17 +132,7 @@
     "s_\\infty  &= \\sigma_\\infty + j \\omega_\\infty & &\\sigma_\\infty = 20000, \\omega_\\infty = 2 \\pi \\cdot 4000\n",
     "\\end{align}\n",
     "\n",
-    "is constructed in this example. First the contribution of the zero $s_0$ to the magnitude of the transfer function $H(j \\omega)$ is computed and plotted over the frequency $f$ using $\\omega = 2 \\pi f$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def db(x):\n",
-    "    return 20 * sym.log(sym.Abs(x), 10)"
+    "is constructed in this example. First the contribution of the pair of complex conjugate zeros $s_0$ and $s_0^*$ to the magnitude of the transfer function $H(j \\omega)$ is computed and plotted over the frequency $f$ using $\\omega = 2 \\pi f$."
    ]
   },
   {
@@ -136,15 +147,15 @@
     "\n",
     "H1 = (s - s_0)*(s - sym.conjugate(s_0))\n",
     "Hlog1 = db(H1)\n",
-    "\n",
-    "sym.plot(Hlog1, (f, 10, 10000), xscale='log', xlabel='$f$', ylabel='$20 \\log_{10} |H_0(j \\omega)|$ in dB');"
+    "logx_plot(Hlog1, (f, 10, 10000), xlabel='$f$',\n",
+    "          ylabel='$20 \\log_{10} |H_0(j \\omega)|$ in dB')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the contribution of the pole $s_\\infty$ is computed and plotted"
+    "Now the contribution of the pair of complex conjugate poles $s_\\infty$ and $s_\\infty^*$ is computed and plotted"
    ]
   },
   {
@@ -157,14 +168,15 @@
     "\n",
     "H2 = 1/((s - s_inf)*(s - sym.conjugate(s_inf)))\n",
     "Hlog2 = db(H2)\n",
-    "sym.plot(Hlog2, (f, 10, 20000), xscale='log', xlabel='$f$', ylabel='$20 \\log_{10} |H_\\infty(j \\omega)|$ in dB');"
+    "logx_plot(Hlog2, (f, 10, 20000), xlabel='$f$',\n",
+    "          ylabel='$20 \\log_{10} |H_\\infty(j \\omega)|$ in dB')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The (logarithmic) magnitude frequency response of the system is given by superposition of the individual contributions from the zero and the pole"
+    "The (logarithmic) magnitude frequency response of the system is given by superposition of the individual contributions from the zeros and the poles"
    ]
   },
   {
@@ -174,7 +186,8 @@
    "outputs": [],
    "source": [
     "Hlog = Hlog1 + Hlog2\n",
-    "sym.plot(Hlog, (f, 10, 50000), xscale='log', xlabel='$f$', ylabel='$20 \\log_{10} |H(j \\omega)|$ in dB');"
+    "logx_plot(Hlog, (f, 10, 50000), xlabel='$f$',\n",
+    "          ylabel='$20 \\log_{10} |H(j \\omega)|$ in dB')"
    ]
   },
   {
