Re-run examples

--- a/systems_spectral_domain/phase_group_delay.ipynb
+++ b/systems_spectral_domain/phase_group_delay.ipynb
@@ -94,7 +94,8 @@
    "outputs": [],
    "source": [
     "RLC = {R: 1, L: sym.Rational('.5'), C: sym.Rational('.4')}\n",
-    "sym.plot(tp.subs(RLC), (w, -10, 10), xlabel='$\\omega$', ylabel='$t_p(j \\omega)$');"
+    "sym.plot(tp.subs(RLC), (w, -10, 10),\n",
+    "         xlabel='$\\omega$', ylabel='$t_p(j \\omega)$')"
    ]
   },
   {
@@ -128,7 +129,8 @@
    "outputs": [],
    "source": [
     "tg = - sym.diff(phi, w)\n",
-    "sym.plot(tg.subs(RLC), (w, -10, 10), xlabel='$\\omega$', ylabel='$t_g(j \\omega)$');"
+    "sym.plot(tg.subs(RLC), (w, -10, 10),\n",
+    "         xlabel='$\\omega$', ylabel='$t_g(j \\omega)$')"
    ]
   },
   {
