Fixed plotting of bode plot, re-runn examples, minor edits

--- a/systems_spectral_domain/combination.ipynb
+++ b/systems_spectral_domain/combination.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Combination of Systems\n",
     "\n",
-    "The representation of complex systems as combination of simpler systems is often convenient for the analysis or synthesis. This section discusses three of the most common combinations, the series or parallel connection of systems as well as feedback loops."
+    "The representation of complex systems as combination of simpler systems is often convenient for their analysis or synthesis. This section discusses three of the most common combinations, the series and parallel connection of systems as well as feedback loops."
    ]
   },
   {
@@ -26,7 +26,7 @@
    "source": [
     "### Concatenation\n",
     "\n",
-    "When two systems are combined in series by connecting the output of the first system to the input of a second system this is termed as *concatenation* of two systems. Denoting the impulse responses of the two systems as $h_1(t)$ and $h_2(t)$, the output signal $y(t)$ of the second system is given as\n",
+    "When two linear time-invariant (LTI) systems are combined in series by connecting the output of the first system to the input of a second system this is termed as *concatenation* of two systems. Denoting the impulse responses of the two systems by $h_1(t)$ and $h_2(t)$, the output signal $y(t)$ of the second system is given as\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) =  x(t) * h_1(t) * h_2(t)\n",
@@ -38,7 +38,7 @@
     "Y(s) = \\underbrace{H_1(s) \\cdot H_2(s)}_{H(s)} \\cdot X(s)\n",
     "\\end{equation}\n",
     "\n",
-    "It can be concluded that the concatenation of two systems can be regarded as one system with the transfer function $H(s) = H_1(s) \\cdot H_2(s)$. Hence, the following structures are equivalent\n",
+    "It can be concluded that the concatenation of two systems can be regarded as one LTI system with the transfer function $H(s) = H_1(s) \\cdot H_2(s)$. Hence, the following structures are equivalent\n",
     "\n",
     "![Concatenation of two systems](concatenation.png)\n",
     "\n",
@@ -63,7 +63,7 @@
     "H_0(s) = \\frac{1}{LC s^2 + RC s + 1}\n",
     "\\end{equation}\n",
     "\n",
-    "where $R$, $L$ and $C$ denote the values of the resistor, capacitor and inductor. Concatenation of $N$ second-order filters leads to filter with order $2 N$. Its transfer function reads\n",
+    "where $R$, $L$ and $C$ denote the values of the resistor, capacitor and inductor. Concatenation of $N$ second-order filters leads to a filter with order $2 N$. Its transfer function reads\n",
     "\n",
     "\\begin{equation}\n",
     "H_N(s) = \\left( \\frac{1}{LC s^2 + RC s + 1} \\right)^N\n",
@@ -104,15 +104,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from sympy.plotting.plot import MatplotlibBackend\n",
+    "\n",
     "RLC = {R: 1, L: sym.Rational('.5'), C: sym.Rational('.4')}\n",
     "HNlog = 20*sym.log(sym.Abs(HN.subs(RLC).subs(s, 2*sym.pi*w)), 10)\n",
     "\n",
-    "p1 = sym.plot(HNlog.subs(N, 1), (w, 0.1, 100), xscale='log', xlabel='$\\omega$', ylabel='$20 \\log_{10} | H_n(j \\omega) | in dB$', line_color='r', show=False);\n",
-    "p2 = sym.plot(HNlog.subs(N, 2), (w, 0.1, 100), xscale='log', xlabel='$\\omega$', ylabel='$20 \\log_{10} | H_n(j \\omega) | in dB$', line_color='g', show=False);\n",
-    "p3 = sym.plot(HNlog.subs(N, 3), (w, 0.1, 100), xscale='log', xlabel='$\\omega$', ylabel='$20 \\log_{10} | H_n(j \\omega) | in dB$', line_color='b', show=False);\n",
+    "p1 = sym.plot(HNlog.subs(N, 1), (w, 0.1, 100), xlabel='$\\omega$', ylabel='$20 \\log_{10} | H_n(j \\omega) | in dB$', line_color='r', show=False);\n",
+    "p2 = sym.plot(HNlog.subs(N, 2), (w, 0.1, 100), xlabel='$\\omega$', ylabel='$20 \\log_{10} | H_n(j \\omega) | in dB$', line_color='g', show=False);\n",
+    "p3 = sym.plot(HNlog.subs(N, 3), (w, 0.1, 100), xlabel='$\\omega$', ylabel='$20 \\log_{10} | H_n(j \\omega) | in dB$', line_color='b', show=False);\n",
     "p1.extend(p2)\n",
     "p1.extend(p3)\n",
-    "p1.show()"
+    "\n",
+    "backend = MatplotlibBackend(p1)\n",
+    "backend.process_series()\n",
+    "backend.ax.spines['left'].set_position(('axes', 0))\n",
+    "backend.ax.spines['bottom'].set_position(('axes', 0))\n",
+    "plt.xscale('log')\n",
+    "plt.grid(which='both')"
    ]
   },
   {
@@ -133,7 +142,7 @@
    "source": [
     "### Parallel Connection\n",
     "\n",
-    "A structure where two systems share the same input signal and the output signals are superimposed is called *parallel connection*. The overall output signal $y(t)$ is given as the superposition of the output signals of the individual systems\n",
+    "A structure where two LTI systems share the same input signal and the output signals are superimposed is called *parallel connection*. The overall output signal $y(t)$ is given as the superposition of the output signals of the individual systems\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = h_1(t) * x(t) + h_2(t) * x(t)\n",
@@ -166,7 +175,7 @@
    "source": [
     "### Feedback\n",
     "\n",
-    "The connection of two systems, where the input of the second system is connected to the output of the first and the output of the second system is superimposed to the input of the first is called *feedback loop*. This structure is depicted in the following illustration (upper block diagram)\n",
+    "The connection of two LTI systems, where the input of the second system is connected to the output of the first and the output of the second system is superimposed to the input of the first is called *feedback loop*. This structure is depicted in the following illustration (upper block diagram)\n",
     "\n",
     "![Two systems combined in a feedback loop](feedback.png)\n",
     "\n",
