Common style for plots, fixed some typos, re-run examples

--- a/system_properties/causality_stability.ipynb
+++ b/system_properties/causality_stability.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Causality\n",
     "\n",
-    "The [principle of causality](https://en.wikipedia.org/wiki/Causality) states that an effect has to follow its cause temporally. Theoretical systems may violate this fundamental principle which limits their practical applicability. Causality is hence an important aspect for the practical realization of systems. Conditions for the impulse response of a linear time-invariant (LTI) causal system as well as for its transfer function are derived in this section."
+    "The [principle of causality](https://en.wikipedia.org/wiki/Causality) states that an effect temporally has to follow its cause. A systems may violate this fundamental principle which limits its practical realization. Causality is hence an important aspect for the practical realization of systems. Conditions for causal linear time-invariant (LTI) systems for both the impulse response as well as the transfer function are derived in this section."
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "## Stability\n",
     "\n",
-    "The stability of a system can be evaluated with respect to different criteria. The most common ones are [Lyapunov stability](https://en.wikipedia.org/wiki/Lyapunov_stability) and [bounded-input bounded-output stability](https://en.wikipedia.org/wiki/BIBO_stability). The latter is introduced in the following."
+    "The stability of a system can be evaluated with respect to various different criteria. The most common ones are [Lyapunov stability](https://en.wikipedia.org/wiki/Lyapunov_stability) and [bounded-input bounded-output stability](https://en.wikipedia.org/wiki/BIBO_stability). The latter is introduced in the following."
    ]
   },
   {
@@ -157,7 +157,7 @@
     "\\int_{-\\infty}^{\\infty} |\\epsilon(t) t^{\\mu - 1} e^{s_{\\infty \\mu} t}| \\; dt = \\int_0^{\\infty} t^{\\mu - 1} e^{\\sigma_{\\infty \\mu} t} \\; dt\n",
     "\\end{equation}\n",
     "\n",
-    "where $s_{\\infty \\mu} = \\sigma_{\\infty \\mu} + j \\omega_{\\infty \\mu}$. Above integral is absolutely integrable if $\\sigma_{\\infty \\mu} < 0$. \n",
+    "where $s_{\\infty \\mu} = \\sigma_{\\infty \\mu} + j \\omega_{\\infty \\mu}$. It can be concluded that above integral is absolutely integrable if $\\sigma_{\\infty \\mu} < 0$. \n",
     "\n",
     "If $M > N$, the system is not stable in the BIBO sense. This statement can be proven by a counterexample. If $M > N$, a polynominal in $s$ with positive powers can be split off from the transfer function $H(s)$ by polynominal division. Lets consider one of these terms, for instance $H(s) = s$. It follows by application of the derivation theorem that $h(t) = \\frac{d}{dt} \\delta(t)$. For the bounded input signal $x(t) = \\cos(\\omega_0 t \\cdot t)$, the output signal $y(t) = \\cos(\\omega_0 t \\cdot t) * \\frac{d}{dt} \\delta(t) = \\frac{d}{dt} \\cos(\\omega_0 t \\cdot t) = - 2 \\omega_0 t \\sin(\\omega_0 t \\cdot t)$ is not bounded for $t \\to \\infty$. The same argumentation holds for positive powers of $s$ by repeated application of the derivation theorem.\n",
     "\n",
@@ -195,8 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "s = sym.symbols('s', complex=True)\n",
@@ -284,7 +284,7 @@
    "source": [
     "## Realizability\n",
     "\n",
-    "A system is said the be realizable if it is a causal and stable system. Realizability is a prerequisite for the practical implementation of systems. Causality implies that the impulse response $h(t)$ of the system has to be a causal signal. Hence the region of convergence (ROC) of its transfer function $H(s) = \\mathcal{L} \\{ h(t) \\}$ is the half-plane located right of all poles. Stability and causality of a system with rational transfer function $H(s)$ implies that its poles are located in the left $s$-half-plane.\n",
+    "A system is said to be realizable if it is a causal and stable system. Realizability is a prerequisite for the practical implementation of systems. Causality implies that the impulse response $h(t)$ of the system has to be a causal signal. Hence the region of convergence (ROC) of its transfer function $H(s) = \\mathcal{L} \\{ h(t) \\}$ is the half-plane located right of all poles. Stability and causality of a system with rational transfer function $H(s)$ implies that its poles are located in the left $s$-half-plane.\n",
     "\n",
     "Summarizing, a system with rational transfer function $H(s)$ is realizable iff all poles of $H(s)$ are located in the left $s$-half-plane not including the imaginary axis and the order of the numerator is lower or equal to the order of the denominator. The ROC is given by a right-sided $s$-half-plane including the imaginary axis. The locations of the zeros of the transfer function have no influence on the realizability of systems."
    ]
@@ -317,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
