Minor edits, re-run examples, common plotting style

--- a/system_properties/classes.ipynb
+++ b/system_properties/classes.ipynb
@@ -53,9 +53,9 @@
     "\\varphi(j \\omega) &= - \\varphi(-j \\omega)\n",
     "\\end{align}\n",
     "\n",
-    "Due to these symmetry relations often only the positive part $\\omega \\geq 0$ of the magnitude and phase of the transfer function are plotted. Note that such a representation is ambiguous without the additional knowledge that the system is real-valued.\n",
+    "Due to these symmetries often only the positive part $\\omega \\geq 0$ of the magnitude and phase of the transfer function are plotted. Note that such a representation is ambiguous without the additional knowledge that the system is real-valued.\n",
     "\n",
-    "Since physically existing signals are real-valued, Real-valued systems are of paramount importance in practical applications. The symmetry relations derived above have to be considered when designing real-valued systems in the spectral domain."
+    "Since physically existing signals are real-valued, real-valued systems are of paramount importance in practical applications. The symmetry relations derived above have to be considered when designing real-valued systems in the spectral domain."
    ]
   },
   {
@@ -84,7 +84,7 @@
     "\n",
     "It follows that the magnitude response of a distortonless system  is constant $| H(j \\omega) | = H_0$, the phase response is linearly dependent on the frequency $\\varphi_\\text{H}(j \\omega) = - \\omega \\tau$, and the [phase and group delay](../systems_spectral_domain/phase_group_delay.ipynb) are constant $t_p = t_g = \\tau$.\n",
     "\n",
-    "The characteristics of a distortionless system are often the desired properties for sensors, actuators, amplifiers and transmission paths. In this context the distortionless system serves as an idealized model for such elements or is used as goal for the equalization of non-ideal elements."
+    "The characteristics of a distortionless system are often the desired properties of sensors, actuators, amplifiers and transmission paths. In this context the distortionless system serves as an idealized model for such elements or is used as goal for the equalization of non-ideal elements."
    ]
   },
   {
@@ -155,14 +155,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t = sym.symbols('t', real=True)\n",
+    "c = 5\n",
     "\n",
-    "h = 1/(2*sym.pi) * sym.sinc((t-5)/2)**2\n",
-    "sym.plot(h, (t, -5, 15), xlabel='$t$', ylabel='$h(t)$');"
+    "h = 1/(2*sym.pi) * sym.sinc((t-c)/2)**2\n",
+    "sym.plot(h, (t, -5, 15), xlabel='$t$', ylabel='$h(t)$')"
    ]
   },
   {
@@ -180,7 +181,7 @@
     "is investigated in this exercise.\n",
     "\n",
     "* Is the system real-valued?\n",
-    "* Derive the impulse response $h(t)$ of the linear-phase system.\n",
+    "* Derive the impulse response $h(t)$ of the linear-phase system. Is the system causal? Is it stable in the BIBO sennse?\n",
     "* Do the above derived symmetries hold for the impulse response?"
    ]
   },
@@ -201,7 +202,7 @@
     "\n",
     "where $s_{0 \\mu}$ and $s_{\\infty \\nu}$ denote the $\\mu$-th zero and $\\nu$-th pole of $H(s)$, and $Q$ and $P$ the total number of zeros and poles, respectively. The magnitude response for a given frequency $\\omega$ is determined by the relative distances of the poles and zeros to the point $s = j \\omega$ on the imaginary axis. Mirroring the zeros at the imaginary axis does not change the magnitude response. This is due to the fact that $| j \\omega - s_{0 \\mu} | = | j \\omega + s^*_{0 \\mu} |$ holds since only the sign of the real part inside the magnitude changes.\n",
     "\n",
-    "However, the group delay is different for zeros in the left and right $s$-half-plane. In the [foundations of the Bode plots](../systems_spectral_domain/bode_plot.ipynb#Bode-Plots) it has been shown that the phase $\\varphi_\\text{H}(j \\omega)$ of a rational transfer function $H(s)$ can be written as\n",
+    "However, the group delay is different for zeros in the left and right $s$-half-plane. In the [foundations of Bode plots](../systems_spectral_domain/bode_plot.ipynb#Bode-Plots) it has been shown that the phase $\\varphi_\\text{H}(j \\omega)$ of a rational transfer function $H(s)$ can be written as\n",
     "\n",
     "\\begin{equation}\n",
     "\\varphi_H(j \\omega) = \\sum_{\\mu=0}^{Q} \\arg (j \\omega - s_{0 \\mu}) - \\sum_{\\nu=0}^{P} \\arg (j \\omega - s_{\\infty \\nu})\n",
@@ -238,7 +239,7 @@
     "H_\\text{NMPS}(j \\omega) = \\frac{(j \\omega + s_0^*)(j \\omega + s_0)}{(j \\omega - s_\\infty)^2}\n",
     "\\end{equation}\n",
     "\n",
-    "The magnitude response and group delay for both systems is computed and plotted for $s_\\infty = -2$ and $s_0 = - 1 + j$. First the transfer functions are defined and the group delays are computed"
+    "The magnitude response and group delay for both systems are computed and plotted for $s_\\infty = -2$ and $s_0 = - 1 + j$. First the transfer functions are defined and the group delays are computed"
    ]
   },
   {
@@ -356,7 +357,8 @@
     "s_inf = -1 + sym.I\n",
     "s_0 = - sym.conjugate(s_inf)\n",
     "\n",
-    "H = (jw - s_0)*(jw - sym.conjugate(s_0))/((jw - s_inf)*(jw - sym.conjugate(s_inf)))\n",
+    "H = (jw - s_0)*(jw - sym.conjugate(s_0)) / \\\n",
+    "    ((jw - s_inf)*(jw - sym.conjugate(s_inf)))\n",
     "H"
    ]
   },
@@ -420,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
