--- a/system_properties/idealized_systems.ipynb
+++ b/system_properties/idealized_systems.ipynb
@@ -68,8 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t, w = sym.symbols('t omega', real=True)\n",
@@ -77,7 +77,7 @@
     "T = 5\n",
     "\n",
     "h = wc/sym.pi * sym.sinc(wc*(t-T/2))\n",
-    "sym.plot(h, (t, 0, T), xlabel='$t$', ylabel='$h(t)$');"
+    "sym.plot(h, (t, 0, T), xlabel='$t$', ylabel='$h(t)$')"
    ]
   },
   {
@@ -105,12 +105,13 @@
     "nu = sym.symbols('nu', real=True)\n",
     "w = linspace(0, 1.5*wc, 100)\n",
     "\n",
-    "H = [(T/(2*sym.pi)).evalf(2) * sym.exp(-sym.I*wi*T/2).evalf(2) * sym.Integral(sym.sinc(T/2*(nu-wi)), (nu, -wc, wc)).evalf(2) for wi in w]\n",
+    "H = [(T/(2*sym.pi)).evalf(2) * sym.exp(-sym.I*wi*T/2).evalf(2) *\n",
+    "     sym.Integral(sym.sinc(T/2*(nu-wi)), (nu, -wc, wc)).evalf(2) for wi in w]\n",
     "\n",
     "plt.plot(w, abs(array(H)))\n",
     "plt.xlabel('$\\omega$')\n",
     "plt.ylabel('$|H(j \\omega)|$')\n",
-    "plt.grid();"
+    "plt.grid()"
    ]
   },
   {
@@ -256,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
