--- a/system_properties/causality_stability.ipynb
+++ b/system_properties/causality_stability.ipynb
@@ -186,7 +186,7 @@
     "H(s) = \\frac{1}{(s-s_\\infty)(s-s^*_\\infty)}\n",
     "\\end{equation}\n",
     "\n",
-    "is computed. First the case of a stable system is considered by assuming $\\Re \\{ s_\\infty \\} < 0$ with $s_\\infty = -1 + j$. The impulse response $h(t)$ is computed by inverse Laplace transform of the transfer function"
+    "is computed. First the case of a **stable system** is considered with $s_\\infty = -1 + j$, hence $\\Re \\{ s_\\infty \\} < 0$. Its impulse response $h(t)$ is computed by inverse Laplace transform of the transfer function $h(t) = \\mathcal{L}^{-1} \\{ H(s) \\}$"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the impulse response of an instable system is computed by assuming $\\Re \\{ s_\\infty \\} > 0$ with $s_\\infty = 1 + j$"
+    "Now the impulse response of an **instable system** is investigated with $s_\\infty = 1 + j$, hence $\\Re \\{ s_\\infty \\} > 0$. Its impulse response is given as"
    ]
   },
   {
@@ -275,7 +275,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The impulse response shows exponentially increasing negative values for increasing time. The impulse response is clearly not absolutely integrable and hence the system not stable in the BIBO sense."
+    "The impulse response shows an exponentially increasing amplitude for increasing time. The impulse response is clearly not absolutely integrable and hence the system not stable in the BIBO sense. This may also be confirmed by computing the output signal $y(t)$ for the bounded input signal $x(t) = \\epsilon(t) \\cos(\\omega_0 t)$ via inverse Laplace transform of $Y(s) = H(s) \\cdot X(s)$ with $X(s) = \\mathcal{L} \\{ x(t) \\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w0 = sym.symbols('\\omega_0', real=True)\n",
+    "\n",
+    "Y = 1/((s - s_inf)*(s - sym.conjugate(s_inf))) * s/(s**2 + w0**2)\n",
+    "y = sym.inverse_laplace_transform(Y, s, t)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is straightforward to check that the output signal is not bounded for $t \\to \\infty$ due to the $e^t$ terms. The output signal is plotted for illustration with $\\omega_0 = 10$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sym.plot(y.subs(w0, 10), (t, 0, 16), xlabel='$t$', ylabel='$y(t)$');"
    ]
   },
   {
