Fixed sinc interpolation, common plotting style, re-run examples

--- a/sampling/ideal.ipynb
+++ b/sampling/ideal.ipynb
@@ -170,8 +170,8 @@
     "\n",
     "In practical applications sampling is always oversampled to some degree since the ideal low-pass used to reconstruct the continuous signal cannot be realized. Examples for sampling rates in audio are\n",
     "\n",
-    "| | sampling frequency $f_\\text{s}$ |\n",
-    "|:---|:---:|\n",
+    "| Application | Sampling frequency $f_\\text{s}$ |\n",
+    "|---|:---:|\n",
     "| Telephone service | Narrowband: 8 kHz, Wideband: 16 kHz |\n",
     "| [Compact Disc (CD)](https://en.wikipedia.org/wiki/Compact_disc) | [44.1 kHz](https://en.wikipedia.org/wiki/44,100_Hz) |\n",
     "| [DVD-Audio](https://en.wikipedia.org/wiki/DVD-Audio) | 44.1, 48, 88.2, 96, 176.4, 192 kHz |"
@@ -192,20 +192,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
     "import sympy as sym\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t = sym.symbols('t', real=True)\n",
     "k = sym.symbols('k', integer=True)\n",
-    "\n",
-    "\n",
-    "def sinc(x):\n",
-    "    # faster than sympy.sinc\n",
-    "    return sym.sin(x)/x\n",
     "\n",
     "\n",
     "def ideal_sampling(x, k, w_s):\n",
@@ -216,7 +210,7 @@
     "\n",
     "def ideal_reconstruction(xs, k, w_s):\n",
     "    T = 2*sym.pi/w_s\n",
-    "    return sum(xs[n] * sinc(sym.pi / T * (t - k[n] * T)) for n in range(len(k)))"
+    "    return sum(xs[n] * sym.sinc(sym.pi / T * (t - k[n] * T)) for n in range(len(k)))"
    ]
   },
   {
@@ -233,13 +227,13 @@
    "outputs": [],
    "source": [
     "def plot_signals(xs, y, w_s, k):\n",
-    "    \n",
+    "\n",
     "    plt.stem(k*2*np.pi/w_s, xs)\n",
     "    plt.xlabel('$t$ in s')\n",
     "    plt.ylabel('$x_s[k] = x_s(kT)$')\n",
     "    plt.axis([0, 5, -1.2, 1.2])\n",
     "\n",
-    "    sym.plot(y, (t,0,5), xlabel='$t$', ylabel='$y(t)$', ylim=(-1.2, 1.2))"
+    "    sym.plot(y, (t, 0, 5), xlabel='$t$', ylabel='$y(t)$', ylim=(-1.2, 1.2))"
    ]
   },
   {
@@ -258,7 +252,7 @@
     "w_0 = 5\n",
     "x = sym.cos(w_0 * t)\n",
     "\n",
-    "sym.plot(x, (t,0,5), xlabel=r'$t$', ylabel=r'$x(t)$');"
+    "sym.plot(x, (t, 0, 5), xlabel=r'$t$', ylabel=r'$x(t)$')"
    ]
   },
   {
@@ -370,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
