--- a/discrete_signals/standard_signals.ipynb
+++ b/discrete_signals/standard_signals.ipynb
@@ -94,12 +94,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
     "\n",
     "def exponential_signal(k, Sigma, Omega):\n",
     "    return np.exp((Sigma + 1j * Omega) * k)\n",
+    "\n",
     "\n",
     "def plot_signal(k, x):\n",
     "    plt.figure(figsize=(10, 4))\n",
@@ -231,12 +233,13 @@
     "def dirac(k):\n",
     "    return np.where(k == 0, 1.0, 0.0)\n",
     "\n",
+    "\n",
     "k = np.arange(-10, 11)\n",
     "x = dirac(k)\n",
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
     "plt.ylabel('$\\delta[k]$')\n",
-    "plt.ylim([-0.1, 1.1]);"
+    "plt.ylim([-0.1, 1.1])"
    ]
   },
   {
@@ -314,13 +317,14 @@
     "def heaviside(k):\n",
     "    return np.where(k >= 0, 1.0, 0.0)\n",
     "\n",
+    "\n",
     "k = np.arange(-5, 20)\n",
     "x = heaviside(k)\n",
     "\n",
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
     "plt.ylabel('$\\epsilon[k]$')\n",
-    "plt.ylim([-0.1, 1.1]);"
+    "plt.ylim([-0.1, 1.1])"
    ]
   },
   {
@@ -360,13 +364,14 @@
     "def rect(k, N):\n",
     "    return np.where((0 <= k) & (k < N), 1.0, 0.0)\n",
     "\n",
+    "\n",
     "k = np.arange(-5, 20)\n",
     "x = rect(k, 10)\n",
     "\n",
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
     "plt.ylabel('$\\mathrm{rect}[k]$')\n",
-    "plt.ylim([-0.1, 1.1]);"
+    "plt.ylim([-0.1, 1.1])"
    ]
   },
   {
@@ -424,7 +429,7 @@
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
     "plt.ylabel('$\\mathrm{sgn}[k]$')\n",
-    "plt.ylim([-1.1, 1.1]);"
+    "plt.ylim([-1.1, 1.1])"
    ]
   },
   {
@@ -455,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
