Common plotting style, minor code styling fixes, re-run examples

--- a/periodic_signals/fourier_series.ipynb
+++ b/periodic_signals/fourier_series.ipynb
@@ -74,8 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "n = sym.symbols('n', integer=True)\n",
@@ -108,7 +108,7 @@
     "N = 15\n",
     "\n",
     "x = sym.Sum(Xn * sym.exp(sym.I*n*2*sym.pi/Tp*t), (n, -N, N)).doit()\n",
-    "sym.plot(x, (t,0,10), xlabel='$t$', ylabel='$x_N(t)$');"
+    "sym.plot(x, (t, 0, 10), xlabel='$t$', ylabel='$x_N(t)$')"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
