--- a/discrete_systems/impulse_response.ipynb
+++ b/discrete_systems/impulse_response.ipynb
@@ -274,19 +274,9 @@
     "nbsphinx": "hidden"
    },
    "source": [
-    "### Copyright\n",
+    "**Copyright**\n",
     "\n",
-    "<p xmlns:dct=\"http://purl.org/dc/terms/\">\n",
-    "  <a rel=\"license\"\n",
-    "     href=\"http://creativecommons.org/publicdomain/zero/1.0/\">\n",
-    "    <img src=\"http://i.creativecommons.org/p/zero/1.0/88x31.png\" style=\"border-style: none;\" alt=\"CC0\" />\n",
-    "  </a>\n",
-    "  <br />\n",
-    "  To the extent possible under law,\n",
-    "  <span rel=\"dct:publisher\" resource=\"[_:publisher]\">the person who associated CC0</span>\n",
-    "  with this work has waived all copyright and related or neighboring\n",
-    "  rights to this work.\n",
-    "</p>"
+    "The notebooks are provided as [Open Educational Resource](https://de.wikipedia.org/wiki/Open_Educational_Resources). Feel free to use the notebooks for your own educational purposes. The text is licensed under [Creative Commons Attribution 4.0](https://creativecommons.org/licenses/by/4.0/), the code of the IPython examples under the [MIT license](https://opensource.org/licenses/MIT). Please attribute the work as follows: *Lecture Notes on Signals and Systems* by Sascha Spors."
    ]
   }
  ],
@@ -306,9 +296,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
